// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrivateReplyButton/> render should render a disabled button 1`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
    data-disabled="true"
    data-name="button"
    data-rac=""
    data-react-aria-pressable="true"
    disabled=""
    id="react-aria-:r2:"
    type="button"
  >
    <div
      class="ui-button-surface-a432"
    >
      <span
        class="ui-button-content-a432"
      >
        <span
          class="typography-bold-md ui-text-text-d239"
          data-name="text"
          style="text-align: left; text-wrap: nowrap;"
        >
          <strong>
            <div
              class="logoWrapper"
            >
              <div
                class="logo messengerIcon disabled"
                style="mask-image: url(test-file-stub);"
              />
            </div>
            Message
          </strong>
        </span>
      </span>
    </div>
  </button>
</div>
`;

exports[`<PrivateReplyButton/> render should render a disabled button 2`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="true"
    class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
    data-disabled="true"
    data-name="button"
    data-rac=""
    data-react-aria-pressable="true"
    disabled=""
    id="react-aria-:r4:"
    type="button"
  >
    <div
      class="ui-button-surface-a432"
    >
      <span
        class="ui-button-content-a432"
      >
        <span
          class="typography-bold-md ui-text-text-d239"
          data-name="text"
          style="text-align: left; text-wrap: nowrap;"
        >
          <strong>
            <div
              class="logoWrapper"
            >
              <div
                class="logo messengerIcon disabled"
                style="mask-image: url(test-file-stub);"
              />
            </div>
            Message
          </strong>
        </span>
      </span>
    </div>
  </button>
</div>
`;

exports[`<PrivateReplyButton/> render should render the button 1`] = `
<div
  id="private-reply-button-1"
>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
    data-name="button"
    data-rac=""
    data-react-aria-pressable="true"
    id="react-aria-:r0:"
    tabindex="0"
    type="submit"
  >
    <div
      class="ui-button-surface-a432"
    >
      <span
        class="ui-button-content-a432"
      >
        <span
          class="typography-bold-md ui-text-text-d239"
          data-name="text"
          style="text-align: left; text-wrap: nowrap;"
        >
          <strong>
            <div
              class="logoWrapper"
            >
              <div
                class="logo messengerIcon"
                style="mask-image: url(test-file-stub);"
              />
            </div>
            Message
          </strong>
        </span>
      </span>
    </div>
  </button>
</div>
`;
